@@ -1,4 +1,4 @@
-/* Copyright (C) 1995,1996,1997,1998,1999, 2000 Free Software Foundation, Inc.
+/* Copyright (C) 1995,1996,1997,1998,1999, 2000, 2001 Free Software Foundation, Inc.
  * 
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -79,6 +79,7 @@
 #include "libguile/fports.h"
 #include "libguile/gc.h"
 #include "libguile/gdbint.h"
+#include "libguile/goops.h"
 #include "libguile/gsubr.h"
 #include "libguile/hash.h"
 #include "libguile/hashtab.h"
@@ -573,6 +574,8 @@ scm_init_guile_1 (SCM_STACKITEM *base)
   scm_init_dynamic_linking ();
   scm_init_lang ();
   scm_init_script ();
+
+  scm_init_oop_goops_goopscore_module ();
   
   scm_initialized_p = 1;
 
